kube/services/netpolicy/networkpolicy_manifestservice_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-manifestservice
spec:
  podSelector:
    matchLabels:
      app: manifestservice
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - {}
  policyTypes:
   - Ingress
   - Egress
